[tool.poetry]
name = "pso"
version = "0.1.0"
description = "Particle Swarm Optimization implementation"
authors = ["Luis Mata <luismata06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
